--- a/Projetos/Projeto1/index.html
+++ b/Projetos/Projeto1/index.html
@@ -3,9 +3,81 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Formulário para Viagem ao Espaço</title>
+    <link rel="stylesheet" href="/Projetos/Projeto1/Estilização/style.css">
 </head>
 <body>
-    
+    <header>
+        <img src="/Projetos/Projeto1/Imagens/espaco.png" alt="logoDoSite" id="logoDoSite" class="logoDoSite">
+    </header>
+    <main>
+        <h1 id="title">Formulário para Viagem ao Espaço</h1>
+        <strong><p id="description">Prepare-se para a missão! Cadastre-se para sua jornada intergaláctica.</p></strong>
+        <div class="container">
+            <form id="survey-form">
+                <label for="name" id="name-label">Nome: </label>
+                <input type="text" id="name" name="name" placeholder="Digite o seu nome" required>
+                <br>
+                <label for="email" id="email-label">E-mail: </label>
+                <input type="email" id="email" name="email" placeholder="Digite o seu e-mail" required>
+                <br>
+                <label for="number" id="number-label">Idade: </label>
+                <input type="number" id="number" name="number" placeholder="Informe a sua idade" min="5" max="80" required>
+                <br>
+                <label for="informacao">Qual planeta você quer visitar?</label>
+                <select name="selecao" id="dropdown">
+                    <option value="">Selecione</option>
+                    <option value="1">Mercúrio</option>
+                    <option value="2">Vênus</option>
+                    <option value="3">Terra</option>
+                    <option value="4">Marte</option>
+                    <option value="5">Júpiter</option>
+                    <option value="6">Saturno</option>
+                    <option value="7">Urano</option>
+                    <option value="8">Netuno</option>
+                    <option value="9">Planeta Desconhecido</option>
+                </select>
+                <br>
+                <label for="escolhas">O que você quer encontrar lá?</label>
+                <br>
+                <input type="checkbox" name="escolhas1" value="1">👽 ETs e vida alienígena
+                <br>
+                <input type="checkbox" name="escolhas2" value="2">💧 Água e oceanos ocultos
+                <br>
+                <input type="checkbox" name="escolhas3" value="3">💎 Cristais raros e metais preciosos
+                <br>
+                <input type="checkbox" name="escolhas4" value="4">🚀 Ruínas de civilizações antigas
+                <br>
+                <input type="checkbox" name="escolhas5" value="5">🌱 Possibilidades de vida humana
+                <br>
+                <input type="checkbox" name="escolhas6" value="6">🛸 Tecnologia alienígena avançada
+                <br>
+                <input type="checkbox" name="escolhas7" value="7">🌌 Outros
+                <br>
+                <label for="companheiro">Escolha um companheiro de viagem:</label>
+                <br>
+                <input type="radio" name="companheiro" value="Yoda">🌟 Yoda
+                <br>
+                <input type="radio" name="companheiro" value="Buzz">👨‍🚀 Buzz Lightyear
+                <br>
+                <input type="radio" name="companheiro" value="Groot">🏆 Groot
+                <br>
+                <input type="radio" name="companheiro" value="CapitaMarvel">🦸‍♀️ Capitã Marvel
+                <br>
+                <input type="radio" name="companheiro" value="HarryStyles">🎤 Harry Styles
+                <br>
+                <input type="radio" name="companheiro" value="ACDC">💥 AC/DC
+                <br>
+                <input type="radio" name="companheiro" value="Outros">🌌 Outros
+                <br>
+                <label for="campoTexto">Qual seria seu maior medo no espaço?</label>
+                <br>
+                <textarea name="text" id="campoTexto" placeholder="Insira o seu comentário aqui..."></textarea>
+                <br>
+                <button type="submit">Enviar</button>
+            </form>
+        </div>
+    </main>
+    <footer></footer>
 </body>
 </html>
