--- a/Projetos/Projeto1/index.html
+++ b/Projetos/Projeto1/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulário para Viagem ao Espaço</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap">
     <link rel="stylesheet" href="/Projetos/Projeto1/Estilização/style.css">
 </head>
 <body>
@@ -74,10 +75,12 @@
                 <br>
                 <textarea name="text" id="campoTexto" placeholder="Insira o seu comentário aqui..."></textarea>
                 <br>
-                <button type="submit">Enviar</button>
+                <button id="submit" type="submit">Enviar</button>
             </form>
         </div>
     </main>
-    <footer></footer>
+    <footer>
+        <p>Desenvolvido por: Maria Eduarda da Nóbrega - 2025</p>
+    </footer>
 </body>
 </html>
