--- a/Projetos/Projeto1/index.html
+++ b/Projetos/Projeto1/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulário para Viagem ao Espaço</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap">
-    <link rel="stylesheet" href="/Projetos/Projeto1/Estilização/style.css">
+    <link rel="stylesheet" href="/Estilização/style.css">
 </head>
 <body>
     <header>
-        <img src="/Projetos/Projeto1/Imagens/espaco.png" alt="logoDoSite" id="logoDoSite" class="logoDoSite">
+        <img src="/Imagens/espaco.png" alt="logoDoSite" id="logoDoSite" class="logoDoSite">
     </header>
     <main>
         <h1 id="title">Formulário para Viagem ao Espaço</h1>
